# LLamaTricker

./: .gitignore  Cargo.toml  README.md  a.out  comprun.sh  manual_example.txt  mlidewiwitdane.c
LLamaTricker/: Cargo.toml
LLamaTricker/src/: main.rs
src/: main.rs
