[package]
name = "LLamaTricker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ollama-rs = { version = "0.1.7", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"